# appinfra

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  appinfra.py  docs  etc  examples  pyproject.toml  scripts  setup.cfg  setup.py
.claude/commands/: grade-framework.md
.github/: CODEOWNERS
.github/workflows/: release.yml  test-docker.yml  test-native.yml
appinfra/: __init__.py  _build_info.py  deprecation.py  dict.py  dot_dict.py  errors.py  ewma.py  exceptions.py  field_dict.py  rate_limit.py  regex_utils.py  size.py  testing.py  utils.py  yaml.py
appinfra/app/: FEATURE_REQUEST_fastapi_framework.md  __init__.py  args.py  cfg.py  constants.py  decorators.py  decorators.pyi  errors.py  testing.py  utils.py
appinfra/app/builder/: __init__.py  app.py  config.py  hook.py  middleware.py  plugin.py  tool.py  validation.py
appinfra/app/cli/: __init__.py  commands.py  help.py  parser.py
appinfra/app/core/: __init__.py  app.py  config.py  lifecycle.py  logging_utils.py  shutdown.py
appinfra/app/docs/: __init__.py  generator.py
appinfra/app/fastapi/: __init__.py  errors.py  handlers.py  plugin.py
appinfra/app/server/: __init__.py  base.py  handlers.py  routes.py
appinfra/cli/: __init__.py  cli.py  output.py
appinfra/config/: __init__.py  config.py  constants.py  schemas.py  watcher.py
appinfra/db/: README.md  __init__.py  db.py  utils.py
appinfra/docs/: LICENSE  README.md  SECURITY.md  getting-started.md  index.md
appinfra/etc/: README.md  infra.yaml  mkdocs.yaml  pg.yaml
appinfra/examples/: README.md
appinfra/log/: __init__.py  callback.py  colors.py  config.py  config_holder.py  config_registry.py  constants.py  errors.py  exceptions.py  factory.py  formatters.py  handler_factory.py  level_manager.py  logger.py  logger_with_sep.py  reloader.py  watcher.py
appinfra/net/: README.md  __init__.py  errors.py  http.py  tcp.py
appinfra/observability/: __init__.py  hooks.py
appinfra/scripts/: check.sh  docs-config.sh  pg-config.sh  pg-info.sh  yaml2json.sh
appinfra/security/: __init__.py  filter.py  masking.py  patterns.py
appinfra/service/: __init__.py  base.py  errors.py  graph.py  manager.py  runner.py  state.py
appinfra/subprocess/: __init__.py  context.py
appinfra/time/: README.md  __init__.py  date_range.py  delta.py  eta.py  sched.py  ticker.py  time.py
appinfra/ui/: __init__.py  console.py  fallback.py  help.py  progress_logger.py  prompts.py
appinfra/version/: __init__.py  actions.py  build_info.py  info.py  setup_hook.py  setuptools_hook.py  sources.py  tracker.py
appinfra/yaml/: __init__.py  _include.py  _utils.py  loader.py  types.py
docs/: README.md  getting-started.md  index.md
docs/api/: app-builder.md  app.md  database.md  exceptions.md  fastapi.md  index.md  logging.md  time.md  ui.md  utilities.md  version.md
docs/guides/: api-stability.md  contributing.md  environment-variables.md  framework-integration.md  hot-reload-logging.md  logging-builder.md  makefile-customization.md
etc/: README.md  fastapi.yaml  lg.yaml  pg.yaml
examples/: README.md
examples/01_basics/: hello_world.py
examples/02_app_framework/: app_with_commands.py  app_with_subtools.py  app_with_ticker.py  app_with_tool.py  app_with_tool_builders.py
examples/03_logging/: README.md  database_logging.py  disabled_logging_example.py  logging_builder_example.py  topic_logging_config.yaml  topic_logging_example.py
examples/04_configuration/: README.md  env_overrides_example.py  hot_reload_example.py  tool_config_access.py  yaml_include_example.py
examples/05_database/: README.md  advanced_critical_flush.py  pg_test_helper_custom_config.py  pg_test_helper_example.py
examples/06_advanced/: generator_usage_example.py  tcp_server.py
examples/07_fastapi/: fastapi_server.py
examples/08_decorators/: hierarchical_commands.py  mixed_approach.py  simple_decorator.py
examples/09_ui/: deploy_tool.py  interactive_prompts.py  rich_output.py  spinners_and_progress.py
examples/11_docs/: docs_generation.py
examples/12_version_tracking/: README.md  standalone_tracker.py  version_tracking_demo.py
examples/plugins/: README.md
scripts/: check.sh  cicd-test.sh  install_deps.py  pg-config.sh  pg-info.sh  type-hint.sh
scripts/cicd/: .env.local.example  .env.test  DOCKER_DEVELOPMENT.md  Dockerfile  docker-compose.override.py3.13.yml  docker-compose.yml
scripts/make/: Makefile.all  Makefile.cicd  Makefile.clean  Makefile.config  Makefile.dev  Makefile.docs  Makefile.env  Makefile.help  Makefile.pg  Makefile.pytest
tests/: conftest.py
tests/cli/: conftest.py  test_cli.py  test_completion_tool.py  test_doctor_tool.py  test_output.py
tests/e2e/: README.md  __init__.py  complete_app_workflow.py.disabled  logging_pipeline_e2e.py.disabled  test_auto_config_workflow.py  test_cli_to_database_workflow.py  test_hot_reload_workflow.py  test_main_tool_workflow.py  test_pg_readonly_workflow.py  test_scaffold_workflow.py  test_size_workflow.py  test_subprocess_context.py
tests/fixtures/: __init__.py  config.py  database.py  logging.py  network.py  pg_integration.py  sqlite_integration.py
tests/helpers/: __init__.py  assertions.py  builders.py  parametrize.py
tests/infra/: test_data_dot_dict.py  test_deprecation.py  test_dict.py  test_dot_dict.py  test_ewma.py  test_exceptions.py  test_field_dict.py  test_infra_errors.py  test_pytest_plugin.py  test_rate_limit.py  test_regex_utils.py  test_size.py  test_utils.py  test_yaml.py
tests/integration/: test_fastapi_ipc_lifespan.py  test_pg_class.py  test_pg_fixtures.py  test_process_runner.py  test_schema_isolation.py  test_testing_module.py
tests/performance/: test_logging_throughput.py  test_regex_timeout.py  test_ticker_accuracy.py
tests/property/: test_delta_properties.py  test_dot_dict_properties.py  test_regex_properties.py
tests/security/: conftest.py  test_config_security.py  test_database_security.py  test_e2e_security.py  test_logging_security.py  test_regex_security.py  test_validation_security.py  test_yaml_security.py
(+372 files in other folders)
